[package]
name = "paramtest"
description = "A library for testing parameterized functions"
homepage = "https://github.com/simonhdickson/paramtest"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/simonhdickson/paramtest"
authors = ["Simon Dickson <683945+simonhdickson@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
